# Duo2D

./: .gitignore  CMakeLists.txt  README.md
include/Duo2D/: application.hpp  error.hpp
include/Duo2D/arith/: axis.hpp  matrix.hpp  matrix.inl  point.hpp  quaternion.hpp  quaternion.inl  rect.hpp  size.hpp  vector.hpp  vector_traits.hpp
include/Duo2D/core/: application.hpp  application.inl  application_instance.fwd.hpp  application_instance.hpp  application_instance.inl  asset_heap_config.hpp  asset_heap_config_table.hpp  asset_heap_key_t.hpp  basic_window.hpp  basic_window.inl  buffer_config.hpp  buffer_config_table.hpp  buffer_id.hpp  buffer_id_t.hpp  buffer_key_t.hpp  command_family.hpp  contiguous_map.hpp  contiguous_map.inl  coupling_policy.hpp  decoder.hpp  dispatchable.hpp  drawable.hpp  error.hpp  frames_in_flight.def.hpp  hybrid_ptr.hpp  invoke_all.def.hpp  make.hpp  memory_operation.hpp  memory_policy.hpp  moveable_atomic.hpp  render_process.fwd.hpp  render_process.hpp  render_process.inl  render_stage.hpp  resource_config.hpp  resource_id.hpp  resource_table.hpp  shader_stage.hpp  texture_usage.hpp  thread_pool.hpp  (+4 more)
include/Duo2D/graphics/: viewport.hpp
include/Duo2D/graphics/core/: color.hpp  font.hpp  font_data.hpp  glyph.hpp  renderable.hpp  renderable_container.hpp  renderable_container.inl  texture.hpp  texture_info.hpp  texture_view.hpp
include/Duo2D/graphics/pipeline/: application.hpp  buffer.hpp  command_buffer.hpp  command_buffer.inl  command_pool.hpp  descriptor_pool.hpp  descriptor_pool.inl  descriptor_set.hpp  descriptor_set.inl  descriptor_set_layout.hpp  device_memory.hpp  framebuffer.hpp  image_view.hpp  instance.hpp  logical_device.hpp  make.hpp  physical_device.hpp  pipeline.hpp  pipeline.inl  pipeline_layout.hpp  pipeline_obj.hpp  render_pass.hpp  renderable_buffer.hpp  renderable_buffer.inl  shader_buffer.hpp  shader_module.hpp  shader_module.inl  surface.hpp  swap_chain.hpp  window.hpp  window.inl
include/Duo2D/graphics/prim/: color.hpp  debug_rect.hpp  glyph.hpp  rect.hpp  renderable.hpp  renderable_traits.hpp  styled_rect.hpp  vertex.hpp  viewport.hpp
include/Duo2D/graphics/sync/: fence.hpp  semaphore.hpp
include/Duo2D/graphics/ui/: progress_bar.hpp  progress_bar.inl  text.hpp  text.inl
include/Duo2D/hardware/device/: device_info.hpp  extension.hpp  queue_family.hpp
include/Duo2D/hardware/display/: color_space.hpp  color_space_ids.hpp  display_format.hpp  display_format.inl  (+3 more)
include/Duo2D/input/: category.hpp  code.hpp  codes_map.hpp  combination.hpp  event.hpp  event_function.hpp  event_int.hpp  event_set.hpp  interactable.hpp  map_types.hpp  modifier_flags.hpp  window_info.hpp
include/Duo2D/prim/: bounds_rect.hpp  point.hpp  rect.hpp  size.hpp  vector.hpp
include/Duo2D/shaders/: debug_rect.hpp  generate_rects.hpp  glyph.hpp  rect.hpp  shader_traits.hpp  texture_rect.hpp  triangle.hpp  vertex2.hpp
include/Duo2D/timeline/: acquire_image.hpp  begin_draw_phase.hpp  buffer_dependency.hpp  callback_event.hpp  callbacks.hpp  command.fwd.hpp  command_traits.hpp  copy.hpp  copy_resource_data.hpp  dedicated_command_group.hpp  dispatch.hpp  draw.hpp  end.hpp  end_draw_phase.hpp  event.hpp  initialize.hpp  resource_dependency.hpp  setup.hpp  state.hpp  submit.hpp  submit.inl
include/Duo2D/traits/: aggregate_traits.hpp  asset_like.hpp  attribute_traits.hpp  buffer_traits.hpp  conditional_size.hpp  conditional_value.hpp  dependent_member.hpp  different_from.hpp  directly_renderable.hpp  generic_functor.hpp  instance_tracker.hpp  instance_tracker.inl  interactable_like.hpp  renderable_constraints.hpp  renderable_container_like.hpp  renderable_event_callbacks.hpp  renderable_properties.hpp  renderable_textures.hpp  renderable_traits.hpp  same_as.hpp  shader_input_traits.hpp  shader_traits.hpp  size_constant.hpp  vector_traits.hpp  vertex_traits.hpp  vk_traits.hpp
include/Duo2D/vulkan/: make.hpp
include/sirius/arith/: axis.hpp  matrix.hpp  matrix.inl  point.hpp  quaternion.hpp  quaternion.inl  rect.hpp  size.hpp  vector.hpp
include/sirius/core/: application.hpp  application.inl  application_instance.fwd.hpp  application_instance.hpp  application_instance.inl  asset_heap_config.hpp  asset_heap_config_table.hpp  asset_heap_key_t.hpp  buffer_config.hpp  buffer_config_table.hpp  buffer_id.hpp  buffer_key_t.hpp  command_family.hpp  coupling_policy.hpp  decoder.hpp  dispatchable.hpp  drawable.hpp  error.hpp  hybrid_ptr.hpp  initialize.hpp  make.hpp  memory_operation.hpp  memory_policy.hpp  render_instance.fwd.hpp  render_instance.hpp  render_instance.inl  render_process.fwd.hpp  render_process.hpp  render_process.inl  render_stage.hpp  shader_stage.hpp  texture_usage.hpp  thread_pool.hpp  version.hpp  window.fwd.hpp  window.hpp  window.inl
include/sirius/input/: category.hpp  code.hpp  codes_map.hpp  combination.hpp  event.hpp  event_function.hpp  event_int.hpp  event_set.hpp  map_types.hpp  modifier_flags.hpp  window_info.hpp
include/sirius/shaders/: generate_rects.hpp  rect.hpp  texture_rect.hpp
include/sirius/timeline/: acquire_image.hpp  begin_draw_phase.hpp  buffer_dependency.hpp  callback_event.hpp  command.fwd.hpp  command_traits.hpp  copy_resource_data.hpp  dedicated_command_group.hpp  dispatch.hpp  draw.hpp  end_draw_phase.hpp  event.hpp  initialize.hpp  setup.hpp  state.hpp  submit.hpp  submit.inl
include/sirius/traits/: instance_tracker.hpp  instance_tracker.inl  vector_traits.hpp  vk_traits.hpp
shaders/: compile.cmake  debug_rect.frag  debug_rect.vert  generate_rects.comp  glyph.frag  glyph.vert  rect.frag  rect.vert  texture_rect.frag  texture_rect.vert  vertex2.vert
src/Duo2D/: application.cpp  device.cpp  window.cpp
src/Duo2D/application/: device.cpp  window.cpp
src/Duo2D/core/: application.cpp  window.cpp
src/sirius/core/: initialize.cpp
test/: CMakeLists.txt  asset_heap_config_table.hpp  buffer_config_table.hpp  generate_rects.hpp  push_constants.hpp  resource_table.hpp  styled_rect.hpp  test_application.cpp  test_arithmetic_ops.cpp  test_arithmetic_types.cpp  texture_rect.hpp  timeline.hpp
(+211 files in other folders)
